Update degenerering_r2.tex, degenerering_r3.tex, and 11 more files...

--- a/fig/tikz/geometri/degenerering_r2.tex
+++ b/fig/tikz/geometri/degenerering_r2.tex
@@ -42,7 +42,7 @@
 % Punkt 
 % -------------------------------------------------------
 \filldraw [black] (e) circle (0.2pt);
-\node at (0.3,0.6,-0.1) (){$\mathbf{x}$};
+\node at (0.3,0.6,-0.1) (){$\mathbf{v}$};
 \filldraw [black] (0,0,0.5) circle (0.pt);
 % 
 %
@@ -54,7 +54,7 @@
 \draw[thick] (0,0,0) -- (0,-0.1,0);
 %
 \end{tikzpicture}
-  \captionof{figure}{Et polyeder med en degenereret basal løsning $\mathbf{x}$ i $\R^2$.}
+  \captionof{figure}{Et polyeder med en degenereret basal løsning $\mathbf{v}$ i $\R^2$.}
   \label{fig:mmmm2}
 \end{center}
 %
