--- a/fig/tikz/geometri/degenerering_r3.tex
+++ b/fig/tikz/geometri/degenerering_r3.tex
@@ -105,7 +105,7 @@
 %
 % Punkt 
 % -------------------------------------------------------
-\filldraw [black] (e) circle (0.2pt) node[above] {$\mathbf{x}$};
+\filldraw [black] (e) circle (0.2pt) node[above] {$\mathbf{v}$};
 % 
 % Koordinatsystemet 
 % -------------------------------------------------------
@@ -117,7 +117,7 @@
 \draw[thick] (0,0,0) -- (0,0,-0.1);
 % 
 \end{tikzpicture}
-  \captionof{figure}{Et polyeder med en degenereret basal løsning $\mathbf{x}$ i $\R^3$.}
+  \captionof{figure}{Et polyeder med en degenereret basal løsning $\mathbf{v}$ i $\R^3$.}
   \label{fig:mmmm3}
 \end{center}
 %
