--- a/fig/tikz/geometri/degenerering_std2.tex
+++ b/fig/tikz/geometri/degenerering_std2.tex
@@ -44,8 +44,8 @@
 % Punkt 
 % -------------------------------------------------------
 \filldraw [black] (e) circle (0.2pt);
-\node at (0.3,0.6,-0.1) (){$\mathbf{x}$};
-\node at (0.6 ,0.5,-0.1) (){$\mathbf{a}_1 \mathbf{x} = b_1 - \epsilon$};
+\node at (0.3,0.6,-0.1) (){$\mathbf{v}$};
+\node at (0.6 ,0.5,-0.1) (){$\mathbf{a}_1 \mathbf{x} = b_1 - \varepsilon$};
 \filldraw [black] (0,0,0.5) circle (0.pt);
 % 
 % 
@@ -58,7 +58,7 @@
 \draw[thick] (0,0,0) -- (0,-0.1,0);
 %
 \end{tikzpicture}
-  \captionof{figure}{En lille ændring i den aktive betingelse $\mathbf{a}_1 \mathbf{x} = b_1- \epsilon$, der gør at $\mathbf{x}$ ikke er en degenereret basal løsning.}
+  \captionof{figure}{En lille ændring $\varepsilon$ i den aktive betingelse sådan, at $\mathbf{a}_1 \mathbf{x} = b_1- \varepsilon$, hvilket medfører, at $\mathbf{v}$ ikke er en degenereret basal løsning.}
   \label{fig:mmmjegerikkesyg}
 \end{center}
 %
