--- a/fig/tikz/simplex/mulig_retning.tex
+++ b/fig/tikz/simplex/mulig_retning.tex
@@ -64,15 +64,15 @@
 % Punkterne 
 % -------------------------------------------------------
 \filldraw [black] (0.35,0.35,0) circle (0pt) node[above] {$\mathcal{P}$};
-\filldraw [black] (0.31,0.17,0) circle (0pt) node[anchor=south east]{$\mathbf{x}_2$};
+\filldraw [black] (0.31,0.17,0) circle (0pt) node[anchor=south east]{$\mathbf{v}$};
 \filldraw [black] (e) circle (0pt) node[anchor=
-south east]{$\mathbf{x}_1$};
-\filldraw [black] (a) circle (0pt) node[anchor= north east]{$\mathbf{x}_3$};
+south east]{$\mathbf{u}$};
+\filldraw [black] (a) circle (0pt) node[anchor= north east]{$\mathbf{w}$};
 
 %
 %
 \end{tikzpicture}
-  \captionof{figure}{Vektorerne $\mathbf{x}_1, \mathbf{x}_2$ og $\mathbf{x}_3$, samt tilhørende forskellige mulige retninger, som stadig er indholdt i polyederet $\mathcal{P}$.}
+  \captionof{figure}{Vektorerne $\mathbf{u}, \mathbf{v}$ og $\mathbf{w}$, samt tilhørende forskellige mulige retninger, som stadig er indholdt i polyederet $\mathcal{P}$.}
   \label{fig:julieersmuuuuuk}
 \end{center}
 %
