--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -119,18 +119,18 @@ $P[A \mid\textbf{b}]
 [A_R \mid \textbf{c}]
 $.
 Så gælder det, at 
-$$
+$$ 
 P
 \begin{bmatrix}
-A & \textbf{b}
+A \mid \textbf{b}
 \end{bmatrix}
 =
 \begin{bmatrix}
-PA & P\textbf{b}
+PA \mid P\textbf{b}
 \end{bmatrix}
 =
 \begin{bmatrix}
-A_R & \textbf{c}
+A_R \mid \textbf{c}
 \end{bmatrix},
 $$
 hvormed $PA=A_R$ og $P\textbf{b}=\textbf{c}$.
