--- a/fig/tikz/geometri/degenerering_std1.tex
+++ b/fig/tikz/geometri/degenerering_std1.tex
@@ -42,7 +42,7 @@
 % Punkt 
 % -------------------------------------------------------
 \filldraw [black] (e) circle (0.2pt);
-\node at (0.3,0.6,-0.1) (){$\mathbf{x}$};
+\node at (0.3,0.6,-0.1) (){$\mathbf{v}$};
 \node at (0.6 ,0.5,-0.1) (){$\mathbf{a}_1 \mathbf{x} = b_1$};
 \filldraw [black] (0,0,0.5) circle (0.pt);
 % 
@@ -56,7 +56,7 @@
 \draw[thick] (0,0,0) -- (0,-0.1,0);
 %
 \end{tikzpicture}
-  \captionof{figure}{En overflødig aktiv betingelse $\mathbf{a}_1 \mathbf{x} = b_1$, der gør at $\mathbf{x}$ er en degenereret basal løsning.}
+  \captionof{figure}{En overflødig aktiv betingelse $\mathbf{a}_1 \mathbf{x} = b_1$, som medfører, at $\mathbf{v}$ er en degenereret basal løsning.\\}
   \label{fig:jegerikkesyg}
 \end{center}
 %
