--- a/incl/main/grafisk_losning/reprasentation.tex
+++ b/incl/main/grafisk_losning/reprasentation.tex
@@ -1,6 +1,6 @@
 \section{Repræsentation af begrænsede polyedre}
 %
-Et polyeder har indtil videre i nærværende rapport været defineret ved uligheder. 
+Et polyeder har i rapporten været defineret ved uligheder. 
 I dette afsnit introduceres et alternativ til dette. 
 Det vises, at et begrænset polyeder kan repræsenteres som et konvekst hylster af dets ekstremumspunkter. 
 Dette er givet ved \ref{thm:begraenspoly}. 
@@ -11,55 +11,55 @@ Et ikke-tomt og begrænset polyeder er givet ved det konvekse hylster af dets ek
 %
 \begin{proof}
 Enhver konveks kombination af ekstremumspunkterne er et element i polyederet, eftersom polyederet er en konveks mængde. 
-Derfor ønskes nu at bevise at ethvert element i et begrænset polyeder kan repræsenteres ved en konveks kombination af ekstremumspunkterne. 
+Derfor ønskes nu bevist, at ethvert element i et begrænset polyeder kan repræsenteres ved en konveks kombination af ekstremumspunkterne. 
 \\\\
 %%%%%
-For at bevise dette defineres dimensionen af et polyeder $\mathcal{P} \subset \R^n$ som det mindste heltal $k$, så polyederet $\mathcal{P}$ er betinget af $k$-dimensionelle tilgrænsede underrum af $\R^n$. 
+For at bevise dette defineres dimensionen af et polyeder $\mathcal{P} \subset \R^n$ som det mindste heltal $k$, så polyederet $\mathcal{P}$ er betinget af $k$-dimensionelle tilgrænsende underrum af $\R^n$. 
 Beviset fortsættes dernæst ved at bevise dimensionen af $\mathcal{P}$ ved induktion. 
 Antag, at $\mathcal{P}$ er nul-dimensionel, så polyederet indeholder et enkelt punkt. 
 Punktet er et ekstremumspunkt i $\mathcal{P}$ og resultatet er derfor sandt. \\\\
 %%%%%
 Induktionsskridtet er dernæst at bevise, at det er sandt for alle polyedre med færre dimensioner end $k$. Lad derfor $\mathcal{P} = \{\textbf{x} \in \R^n \mid \mathbf{a}_{i}^T \textbf{x} \geq b_i, i=1,\ldots,m\}$ være et ikke-tom begrænset $k$-dimensionelt polyeder. 
-Så er $\mathcal{P}$ indrammet i et tilgrænset underrum $S$ i $\R^n$, som er givet ved følgende: \\
+Så er $\mathcal{P}$ indrammet i et tilgrænset underrum $\S$ i $\R^n$, som er givet ved følgende: \\
 %%%%%
-$$S = \{\textbf{x}_0+\lambda_1 \textbf{x}_1+\cdots+\lambda_k\textbf{x}_k \mid \lambda_1,\ldots,\lambda_k \in \R\},$$
-hvor $\textbf{x}_1,\ldots,\textbf{x}_k$ er vektorer i $\R^n$. 
-Lad $\textbf{f}_1,\ldots,\textbf{f}_{n-k}$ være lineært uafhængige vektorer, der er ortogonale med vektorerne $\textbf{x}_1,\ldots,\textbf{x}_k$. 
-Lad dernæst $g_i=\mathbf{f}_{i}^T \textbf{x}_0$, gældende for $i=1,\ldots,n-k$, således at ethvert element $\textbf{x}$ i $S$ opfylder 
+$$\S = \{\textbf{v}_0+\lambda_1 \textbf{v}_1+\cdots+\lambda_k\textbf{v}_k \mid \lambda_1,\ldots,\lambda_k \in \R\},$$
+hvor $\textbf{v}_1,\ldots,\textbf{v}_k$ er vektorer i $\R^n$. 
+Lad $\textbf{f}_1,\ldots,\textbf{f}_{n-k}$ være lineært uafhængige vektorer, der er ortogonale med vektorerne $\textbf{v}_1,\ldots,\textbf{v}_k$. 
+Lad dernæst $g_i=\mathbf{f}_{i}^T \textbf{v}_0$, gældende for $i=1,\ldots,n-k$, således at ethvert element $\textbf{v}$ i $\S$ opfylder 
 %%%%%
-$$\mathbf{f}_{i}^T \textbf{x}=g_i, \text{     } \text{for} \text{     } i=1,\ldots,n-k.$$ 
-Siden $\mathcal{P} \subset S$, så skal det være sandt for ethvert element i $\mathcal{P}$.
+$$\mathbf{f}_{i}^T \textbf{v}=g_i, \text{     } \text{for} \text{     } i=1,\ldots,n-k.$$ 
+Siden $\mathcal{P} \subset \S$, så skal det være sandt for ethvert element i $\mathcal{P}$.
 %%%%%
-Lad $\textbf{z}$ være et arbitrært element i $\mathcal{P}$. 
-Hvis det gælder for $\textbf{z}$, at punktet er et ekstremumspunkt i $\mathcal{P}$, så er $\textbf{z}$ en triviel konveks kombination af ekstremumspunkterne i $\mathcal{P}$, og beviset er derfor færdigt. 
-Hvis $\textbf{z}$ derimod ikke er et ekstremumspunkt i $\mathcal{P}$, skal det bevises, at $\textbf{z}$ er en konveks kombination af ekstremumspunkterne i $\mathcal{P}$. 
+Lad $\textbf{w}$ være et arbitrært element i $\mathcal{P}$. 
+Hvis det gælder for $\textbf{w}$, at punktet er et ekstremumspunkt i $\mathcal{P}$, så er $\textbf{w}$ en triviel konveks kombination af ekstremumspunkterne i $\mathcal{P}$, og beviset er derfor færdigt. 
+Hvis $\textbf{w}$ derimod ikke er et ekstremumspunkt i $\mathcal{P}$, skal det bevises, at $\textbf{w}$ er en konveks kombination af ekstremumspunkterne i $\mathcal{P}$. 
 %%%%%
-Lad derfor $\textbf{y}$ være et arbitrært ekstremumspunkt og dan derfor en halvlinje indeholdende alle punkter af formen $\textbf{z}+\lambda(\textbf{z}-\textbf{y})$, hvor $\lambda$ angiver en ikke-negativ skalar. 
+Lad derfor $\textbf{v}$ være et arbitrært ekstremumspunkt og dan derfor en halvlinje indeholdende alle punkter af formen $\textbf{w}+\lambda(\textbf{w}-\textbf{v})$, hvor $\lambda$ angiver en ikke-negativ skalar. 
 Da det gælder, at $\mathcal{P}$ er et begrænset polyeder, vil denne halvlinje nødvendigvis forlade $\mathcal{P}$ og derfor overskride en vilkårlig begrænsning, $\mathbf{a}_{i^*}^T \textbf{x} \geq b_{i^*}$. 
 Ved at anskue hvad det vil resultere i at bryde denne begrænsning, vil der findes et $\lambda^* \geq 0$ og $\textbf{u} \in \mathcal{P}$, så følgende gælder: 
 %%%%%
-$$\textbf{u}=\textbf{z}+\lambda^* (\textbf{z}-\textbf{y}), \text{     } \text{og} \text{      } \mathbf{a}_{i^*}^T \textbf{u} = b_{i^*} $$
-Eftersom begrænsningen $\mathbf{a}_{i}^{T} \textbf{x} \geq b_i$ overskrides, hvis $\lambda$ vokser større end $\lambda^*$, så følger det, at $\mathbf{a}_{i^*}^{T}(\textbf{z}-\textbf{y}) <0.$ 
+$$\textbf{u}=\textbf{w}+\lambda^* (\textbf{w}-\textbf{v}), \text{     } \text{og} \text{      } \mathbf{a}_{i^*}^T \textbf{u} = b_{i^*}.$$
+Eftersom begrænsningen $\mathbf{a}_{i}^{T} \textbf{x} \geq b_i$ overskrides, hvis $\lambda$ vokser større end $\lambda^*$, så følger det, at $\mathbf{a}_{i^*}^{T}(\textbf{w}-\textbf{v}) <0.$ 
 %%%%%
 Da dette gælder, lad derfor $Q$ være et polyeder defineret ved 
 $$Q=\{\textbf{x} \in \mathcal{P} \mid \mathbf{a}_{i^*}^{T} \textbf{x} =b_{i^*}\} = \{\textbf{x} \in \R^n \mid \mathbf{a}_{i}^{T} \textbf{x} \geq b_{i}, i=1,\ldots,m, \text{   } \mathbf{a}_{i^*}^{T} \textbf{x} =b_{i^*}\}.$$
-Da $\textbf{z},\textbf{y} \in P$, så følger at$\mathbf{f}_{i}^{T}\textbf{z}=g_i=\mathbf{f}_{i}^{T}\textbf{y}$, hvilket viser, at $\textbf{z}-\textbf{y}$ er ortogonal med enhver vektor $\mathbf{f}_{i}$, for alle $i=1,\ldots,n-k$. 
-På den anden side er det vist, at $\mathbf{a}_{i^*}^{T}(\textbf{z}-\textbf{y}) <0$, så det gælder, at vektoren  $\mathbf{a}_{i^*}$ ikke er en linear kombination af vektorerne $\mathbf{f}_{i}$, og derfor ikke er lineært uafhængige. 
+Da $\textbf{w},\textbf{v} \in \mathcal{P}$, så følger at $\mathbf{f}_{i}^{T}\textbf{w}=g_i=\mathbf{f}_{i}^{T}\textbf{v}$, hvilket viser, at $\textbf{w}-\textbf{v}$ er ortogonal med enhver vektor $\mathbf{f}_{i}$, for alle $i=1,\ldots,n-k$. 
+På den anden side er det vist, at $\mathbf{a}_{i^*}^{T}(\textbf{w}-\textbf{v}) <0$, så det gælder, at vektoren  $\mathbf{a}_{i^*}$ ikke er en linear kombination af vektorerne $\mathbf{f}_{i}$, og derfor ikke er lineært uafhængige. 
 Bemærk derfor, at \\
 %%%%%
 $$Q \subset \{\textbf{x} \in \R^n \mid \mathbf{a}_{i^*}^{T} \textbf{x}=b_{i^*}, \text{  } \mathbf{f}_{i}^{T}\textbf{x}=g_i, \text{  } i=1,\ldots,n-k\},$$ 
 gældende for ethvert element i $\mathcal{P}$. 
-Mængden på højresiden er defineret ved $n-k+1$ lineært uafhængige lighedsbegrænsninger. 
+Mængden på højresiden er defineret ved $n-k+1$ lineært uafhængige lighedsbetingelser. 
 Dette betyder derfor, at det tilgrænsede underrum har dimensionen givet ved $k-1$, hvormed polyederet $Q$ højst har dimensionen $k-1$. 
 \\\\
 %%%%%
-Ved afslutningsvis at benytte induktionshypotesen på $Q$ og $\textbf{u}$ kan udtrykkes ved den konvekse kombination
+Ved afslutningsvis at benytte induktionshypotesen på $Q$ og $\textbf{u}$, kan $\textbf{u}$ udtrykkes ved den konvekse kombination
 $$\textbf{u}=\sum_{i}\lambda_{i}\textbf{v}_i$$
-af ekstremumspunkterne $\textbf{v}_i$ i polyederet $Q$, hvor $\lambda_i$ er ikke-negative skalarer, som summerer til én. 
+af ekstremumspunkterne $\textbf{v}_i$ i polyederet $Q$, hvor $\lambda_i$ er ikke-negative skalarer, som summerer til én.
 Bemærk dernæst, at i et ekstremumspunkt $\textbf{v}$ skal $\mathbf{a}_{i}^{T} \textbf{v}=b_{i}$ for $n$ antal lineært uafhængige vektorer $\textbf{a}_i$. 
 Derfor er  $\textbf{v}$ også et ekstremumspunkt i $\mathcal{P}$. 
 Ved brug af definitionen for $\lambda^*$ haves derfor, at 
-$$ \textbf{z}=\frac{\textbf{u}+\lambda^*\textbf{y}}{1+\lambda^*}.$$
-Dermed er det bevist, at $\textbf{z}$ er en konveks kombination af ekstremumspunkter i $\mathcal{P}$, da det haves, at 
-$$\textbf{z}=\frac{\lambda^*\textbf{y}}{1+\lambda^*}+\sum_{i}\frac{\lambda_i}{1+\lambda_i}\textbf{v}_i.$$
+$$ \textbf{w}=\frac{\textbf{u}+\lambda^*\textbf{v}}{1+\lambda^*}.$$
+Dermed er det bevist, at $\textbf{w}$ er en konveks kombination af ekstremumspunkter i $\mathcal{P}$, da det haves, at 
+$$\textbf{w}=\frac{\lambda^*\textbf{v}}{1+\lambda^*}+\sum_{i}\frac{\lambda_i}{1+\lambda_i}\textbf{v}_i.$$
 \end{proof}
