Update Vac_vek_wok.py, opg2-system_vaccine.py, and 4 more files...

--- a/CSB/EPG2/incl/main/23a.tex
+++ b/CSB/EPG2/incl/main/23a.tex
@@ -8,5 +8,6 @@ Implementér Euler metoden og Runge-Kutta RK4 metoden for vektorfunktioner.
 \end{color}
 \\\\
 % 
-Se \textsc{system-example.py}.
+Se \textsc{system-example-modi.py}. Implementeringerne er ved
+\textbf{\textit{def euler}}, linje $6$, og \textbf{\textit{def RK4}}, linje $21$.
 %
